# RustyMacBackup

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SWIFT-REWRITE-SPEC.md  build-pkg.sh  build.sh  install.sh  run-tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Sources/App/: AppDelegate.swift  AutoUpdater.swift  IconManager.swift  Info.plist  MenuBuilder.swift  StatusManager.swift  main.swift
Sources/Backup/: BackupEngine+Helpers.swift  BackupEngine.swift  BackupTypes.swift  EnvironmentSnapshot.swift  ExcludeFilter.swift  FileScanner.swift  HardLinker.swift  IOPriority.swift  RestoreEngine.swift  RetentionManager.swift  StatusModels.swift
Sources/CLI/: CLIHandler.swift
Sources/Config/: ConfigDiscovery.swift  ConfigManager.swift  ScheduleManager.swift
Sources/Diagnostics/: DiskDiagnostics.swift  ErrorReporter.swift  FDACheck.swift  Log.swift
Sources/UI/: AppUIState.swift  DesignTokens.swift  PopoverToolsSection.swift  PopoverView.swift  PopoverViewController.swift  ProgressBarView.swift  RestoreWindowController.swift  SnapshotPickerView.swift  SpeedometerView.swift  (+2 more)
launchd/: com.roberdan.rusty-mac-backup.plist
menubar/: AppIcon.icns  Info.plist  build.sh  generate-icon.sh  main.swift
src/: backup.rs  config.rs  exclude.rs  main.rs  retention.rs
tests/: BackupEngineTests.swift  ConfigParserTests.swift  ExcludeFilterTests.swift  HardLinkerTests.swift  RetentionTests.swift  TestRunner.swift  TestSupport.swift
(+3 files in other folders)
