[package]
name = "rusty-mac-backup"
version = "0.2.0"
edition = "2024"
description = "Fast incremental backup tool for macOS using hard links"
authors = ["Roberto Dandrea"]

[[bin]]
name = "rustyback"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
glob-match = "0.2"
anyhow = "1"
colored = "2"
filetime = "0.2"
libc = "0.2"
atty = "0.2"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"
